--- a/src/sass/home/_woolly.scss
+++ b/src/sass/home/_woolly.scss
@@ -3,7 +3,7 @@
 }
 
 html.csstransforms {
-	.hero .wrapper {
+	.woolly-hero .wrapper {
 		z-index: 10;
 	}
 
